2013-02-26  Andy Buckley  <andy.buckley@cern.ch>

	* Adding a lhapdf-config build assistant script.

	* Adding hacky first implementations of log-space interpolators. Separation of x and Q2 ipol seems ever more likely.

	* Started work on new LaTeX manual/paper, based on previous contribution from Ben and Marek.

	* Cleaning up defunct wrappers directories.

	* Fixing a bug in handling of nearest knot lookup for underflow x/Q2 requests.

2013-02-15  Andy Buckley  <andy.buckley@cern.ch>

	* Adding installation and usage instructions to the Doxy manual.

2013-02-13  Andy Buckley  <andy.buckley@cern.ch>

	* Fixing install path data lookup to include the 'LHAPDF' part.

	* Fixed use of interpolation up to the last knot (in Q2, at least)
	by making KnotArray1F::x/q2below never return the last index.

2013-02-12  Andy Buckley  <andy.buckley@cern.ch>

	* Now installing pdfsets.index into the share dir.

	* Now installing lhapdf.conf into the share dir.

	* Header dependence reduction and include statement clean-up.

	* Reworking Interpolator and GridPDF interfaces to centralise
	index finding. KnotArray1F and NF are now defined as non-inner
	classes in a separate KnotArray.h header.

2013-02-11  Andy Buckley  <andy.buckley@cern.ch>

	* Adding a new implementation of NearestPointExtrapolator.

2013-02-04  Andy Buckley  <andy.buckley@cern.ch>

	* Adding migration/testpdf.cc and corresponding README instructions.

	* Removed debug printout from GridPDF.cc and re-added xKnots() and q2Knots() methods.

	* Updated creategrids script to new format.

	* Creating the migration directory.

2013-01-29  Andy Buckley  <andy.buckley@cern.ch>

	* Updates to TODOs, CONFIGFLAGS, DESIGN, etc. after first dev meeting.

	* More Doxygen: making the namespace and free functions documented, with grouping.

2013-01-28  Andy Buckley  <andy.buckley@cern.ch>

	* Adding backward compatibility special case treatment for the "cteq6ll" misspelling from prehistory.
